--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('https://i.pinimg.com/originals/7c/f5/d9/7cf5d95ac563cb1688f99f23019de969.gif') no-repeat center center fixed;
+            background: url('https://wallpapercave.com/wp/wp11165426.jpg') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             flex-direction: column;
