--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('https://wallpapercave.com/wp/wp11165426.jpg') no-repeat center center fixed;
+            background: url('https://wallpapers.com/images/featured/dark-gaming-jdc7028bqa3g20q3.jpg') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             flex-direction: column;
