--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('https://wallpapers.com/images/featured/dark-gaming-jdc7028bqa3g20q3.jpg') no-repeat center center fixed;
+            background: url('https://static.vecteezy.com/system/resources/previews/006/852/804/non_2x/abstract-blue-background-simple-design-for-your-website-free-vector.jpg') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             flex-direction: column;
